--- a/index.html
+++ b/index.html
@@ -19,64 +19,29 @@
     <link rel="stylesheet" href="css/bootstrap-video-carousel.min.css" />
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Dropdown Button Styling */
-        .dropdown {
-            display: inline-block;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 190px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-            z-index: 1;
-            padding: 14px 8px 8px 14px;
-
-        }
-        .dropdown-content a {
-            display: flex;
-            flex-direction: column;
-    margin-bottom: 14px;
-}
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .caret {
-            display: inline-block;
-            width: 0;
-            height: 0;
-            margin-left: 2px;
-            vertical-align: middle;
-            border-top: 4px dashed;
-            border-top: 4px solid\9;
-            border-right: 4px solid transparent;
-            border-left: 4px solid transparent;
-        }
+       
     </style>
 </head>
 
 <body>
     <nav class="navbar">
-        <a href="#" class="logo">Logo</a>
+        <a href="javascript:void(0)" class="logo"><img src="./img/ie-logo1.jpg" alt="logo"></a>
         <ul class="nav-menu nav-links">
             <li class="active"><a href="">HOME</a></li>
             <li class="dropdown">
-                <a href="#">OUR WORK <span class="caret"></span></a>
+                <a href="javascript:void(0)">OUR WORK <span class="caret"></span></a>
                 <div class="dropdown-content">
-                    <a href="#">Public Service Ads</a>
-                    <a href="#">Short Non-Fiction</a>
-                    <a href="#">Long Non-Fiction</a>
-                    <a href="#">Fiction</a>
-                    <a href="#">Animation</a>
+                    <a href="javascript:void(0)">Public Service Ads</a>
+                    <a href="javascript:void(0)">Short Non-Fiction</a>
+                    <a href="javascript:void(0)">Long Non-Fiction</a>
+                    <a href="javascript:void(0)">Fiction</a>
+                    <a href="javascript:void(0)">Animation</a>
                 </div>
             </li>
-            <li><a href="">OUR JOURNEY</a></li>
-            <li><a href="">CLIENTS</a></li>
-            <li><a href="">OUR TEAM</a></li>
-            <li><a href="">CONTACT US</a></li>
+            <li><a href="javascript:void(0)">OUR JOURNEY</a></li>
+            <li><a href="javascript:void(0)">CLIENTS</a></li>
+            <li><a href="javascript:void(0)">OUR TEAM</a></li>
+            <li><a href="javascript:void(0)">CONTACT US</a></li>
         </ul>
         <i class='bx bx-grid-alt menu-hamburger'></i>
     </nav>
