--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/bootstrap-video-carousel.min.css" />
+    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Ishan Echoes | Home Page</title>
     <!-- MDB icon -->
@@ -16,18 +17,47 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
     <!-- MDB -->
-    <link rel="stylesheet" href="css/bootstrap-video-carousel.min.css" />
+
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
     <style>
-       
+        [data-controller=index] .projects-cont .bg-columns .text-service h2 {
+            color: #2a2727;
+        }
+        [data-controller=index] .projects-cont .bg-columns .text-service p {
+            color: #2a2727;
+        }
     </style>
 </head>
 
 <body>
+    <div class="load-cont">
+        <div class="bg-color"><img class="load-ishan" src="./img/ie-logo1.jpg" alt="Ishan Load"></div>
+        <div class="layers">
+            <div class="layers__item">
+                <div class="layers__item-img img1"></div>
+            </div>
+            <div class="layers__item">
+                <div class="layers__item-img img2"></div>
+            </div>
+            <div class="layers__item">
+                <div class="layers__item-img img3"></div>
+            </div>
+            <div class="layers__item">
+                <div class="layers__item-img img4"></div>
+            </div>
+            <div class="layers__item">
+                <div class="layers__item-img img5"></div>
+            </div>
+            <div class="layers__item">
+                <div class="layers__item-img img6"></div>
+            </div>
+        </div>
+    </div>
     <nav class="navbar">
         <a href="javascript:void(0)" class="logo"><img src="./img/ie-logo1.jpg" alt="logo"></a>
         <ul class="nav-menu nav-links">
-            <li class="active"><a href="">HOME</a></li>
+            <li class="active"><a href="javascript:void(0)">HOME</a></li>
             <li class="dropdown">
                 <a href="javascript:void(0)">OUR WORK <span class="caret"></span></a>
                 <div class="dropdown-content">
@@ -47,81 +77,189 @@
     </nav>
 
     <!-- Carousel wrapper -->
-    <div id="carouselVideoExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
-        <!-- Indicators -->
-        <div class="carousel-indicators">
-            <button type="button" data-mdb-target="#carouselVideoExample" data-mdb-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-mdb-target="#carouselVideoExample" data-mdb-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-mdb-target="#carouselVideoExample" data-mdb-slide-to="2"
-                aria-label="Slide 3"></button>
-            <div class="carousel-caption">
-                <h3>Ishan Echoes | Home Page</h3>
-                <p>Ishan Echoes aspires to produce meaningful films in an aesthetic manner
-                </p>
+    <div data-scroll-container>
+        <div data-controller="index">
+            <div class="banner-cont">
+                <div class="splide" id="splide-index">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide slide1">
+                                <div id="ishan-vid2" class="video-slide"><video id="player_banner_2" muted autoplay loop
+                                        playsinline>
+                                        <source src="https://mdbcdn.b-cdn.net/img/video/Tropical.mp4" type="video/mp4">
+                                    </video>
+                                    <div class="filter"></div>
+                                    <div class="text-service"><a href="javascript:void(0)">
+                                            <p><span class="word">STEP 1</span></p>
+                                            <h2 data-splitting>Ishan Echoes | Home Page 1</h2>
+                                            <p><span class="word">Ishan Echoes aspires to produce meaningful films in an
+                                                    aesthetic manner</span></p>
+                                            <!-- <p><span class="word">Ishan Echoes aspires to produce meaningful films in an aesthetic manner</span></p> -->
+                                        </a></div>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div id="ishan-vid1" class="video-slide"><video id="player_banner" muted autoplay loop
+                                        playsinline>
+                                        <source src="https://mdbcdn.b-cdn.net/img/video/forest.mp4" type="video/mp4">
+                                    </video>
+                                    <div class="filter"></div>
+                                    <div class="text-service"><a href="javascript:void(0)">
+                                            <p><span class="word">STEP 2</span></p>
+                                            <h2 data-splitting>Ishan Echoes | Home Page 2</h2>
+                                            <p><span class="word">Ishan Echoes aspires to produce meaningful films in an
+                                                    aesthetic manner</span></p>
+                                            <!-- <p><span class="word">Ishan Echoes aspires to produce meaningful films in an aesthetic manner</span></p> -->
+                                        </a></div>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div id="ishan-vid3" class="video-slide"><video id="player_banner_3" muted autoplay loop
+                                        playsinline>
+                                        <source src="https://mdbcdn.b-cdn.net/img/video/Agua-natural.mp4"
+                                            type="video/mp4">
+                                    </video>
+                                    <div class="filter"></div>
+                                    <div class="text-service"><a
+                                            href="player/523287250/MSS%20-%20Clinical%20antibacterial.html">
+                                            <p><span class="word">STEP 3</span></p>
+                                            <h2 data-splitting>Ishan Echoes | Home Page 3</h2>
+                                            <p><span class="word">Ishan Echoes aspires to produce meaningful films in an
+                                                    aesthetic manner</span></p>
+                                            <!-- <p><span class="word">Ishan Echoes aspires to produce meaningful films in an aesthetic manner</span></p> -->
+                                        </a></div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="arrow-down">
+                    <p>Scroll</p>
+                </div>
+            </div>
+            <!-- Carousel wrapper -->
+
+            <div class="projects-cont" id="fixed-elements">
+                <div class="bg-columns bg-cont" data-scroll data-scroll-sticky data-scroll-target="#fixed-elements">
+                    <div class="bg-columns sld1" id="bg-sld"></div>
+                </div>
+                <div class="bg-columns txt sld1-sm">
+                    <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld1"
+                        data-scroll-repeat="true">
+                        <h2>OUR<br>FRAMEWORK</h2>
+                        <p><span class="word">Ishan Echoes aspires to produce meaningful films in an aesthetic
+                                manner.</span></p>
+                        <p><span class="word">Over almost three decades, we have executed fiction telefilms and serials,
+                                long and short format documentaries, films on development programs, advocacy films and
+                                public service advertisements.</span></p>
+                        <div class="btn-hide">
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-columns txt sld2-sm">
+                    <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld2"
+                        data-scroll-repeat="true">
+                        <h2>OUR<br>ROLE</h2>
+                        <p><span class="word">At Ishan Echoes, all cinematic creativity serves to echo the client's
+                                communication objectives with honesty and passion.</span></p>
+                        <p><span class="word">Our role is simply to make your film for you!</span></p>
+                        <div class="btn-hide">
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-columns txt sld3-sm">
+                    <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld3"
+                        data-scroll-repeat="true">
+                        <!-- <h2>CINE Y<br>CONTENIDO</h2>
+                        <p><span class="word">Creamos largometrajes y otros formatos para que trasciendan a nivel
+                                internacional. Somos una de las productoras audiovisuales más exitosas en el Ecuador
+                                y
+                                nos puedes encontrar en Guayaquil y Quito.</span></p>
+                        <div class="btn-hide">
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                        </div> -->
+                    </div>
+                </div>
+                <!-- <div class="bg-columns txt sld4-sm">
+                    <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld4"
+                        data-scroll-repeat="true">
+                        <h2>CORPORATIVOS</h2>
+                        <p><span class="word">La misma experiencia y expertise de spots y cine lo aplicamos a tus
+                                videos
+                                institucionales.</span></p>
+                        <div class="btn-hide">
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                        </div>
+                    </div>
+                </div> -->
+
             </div>
         </div>
-
-        <!-- Inner -->
-        <div class="carousel-inner">
-            <!-- Single item -->
-            <div class="carousel-item active">
-                <video class="img-fluid" autoplay loop muted>
-                    <source src="https://mdbcdn.b-cdn.net/img/video/Tropical.mp4" type="video/mp4" />
-                </video>
-                <!-- <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>
-            Nulla vitae elit libero, a pharetra augue mollis interdum.
-          </p>
-        </div> -->
-            </div>
-
-            <!-- Single item -->
-            <div class="carousel-item">
-                <video class="img-fluid" autoplay loop muted>
-                    <source src="https://mdbcdn.b-cdn.net/img/video/forest.mp4" type="video/mp4" />
-                </video>
-                <!-- <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-        </div> -->
-            </div>
-
-            <!-- Single item -->
-            <div class="carousel-item">
-                <video class="img-fluid" autoplay loop muted>
-                    <source src="https://mdbcdn.b-cdn.net/img/video/Agua-natural.mp4" type="video/mp4" />
-                </video>
-                <!-- <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>
-            Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-          </p>
-        </div> -->
+        <div class="footer-cont">
+            <div class="columns">
+                <div class="column">
+                    <div class="news">
+                        <h3>Newsletter</h3>
+                        <p>Ishan Echoes aspires to produce meaningful films in an aesthetic manner.</p>
+                        <div>
+                            <form class="input-cont" id="news-chimp" data-msg-alert="Gracias por suscribirte!"
+                                action="javascript:void(0)" name="mc-embedded-subscribe-form" target="_blank"
+                                novalidate><input class="news-input" type="email" required value="" name="EMAIL"
+                                    id="mce-EMAIL" aria-label="newsletter">
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
+                                        name="b_134f47706dd6f747e41dfc2f6_d56ec8690a" tabindex="-1" value=""></div>
+                                <button type="submit" class="button" id="mc-embedded-subscribe">Enviar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="contact">
+                        <div class="address">
+                            <h3>Address</h3>
+                            <p>303, 'Mahagun Manor',Plot F-30, Sector-50,</p>
+                            <p>NOIDA, 201301, India</p>
+                        </div>
+                        <div class="mail">
+                            <h3>Email :</h3>
+                            <p>abir.ishanechoes.gmail.com</p>
+                        </div>
+                        <div class="phone">
+                            <h3>Phone number</h3>
+                            <p>+91 9811113488</p>
+                            <!-- <p>+593 451 028 96</p>
+                            <p>+593 450 501 58</p>
+                            <p>+593 451 291 27</p> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="social">
+                        <h3>FOLLOW AS FOR UPDATE</h3>
+                        <div class="img-cont">
+                            <div class="icons"><a href="javascript:void(0)" target="_blank" rel="noopener"><img
+                                        src="img/social-07.svg" alt="facebook"></a><a href="javascript:void(0)"
+                                    target="_blank" rel="noopener"><img src="img/social-08.svg" alt="instagram"></a><a
+                                    href="javascript:void(0)" target="_blank" rel="noopener"><img
+                                        src="img/social-09.svg" alt="youtube"></a><a href="javascript:void(0)"
+                                    target="_blank" rel="noopener"><img src="img/social-10.svg" alt="vimeo"></a><a
+                                    href="javascript:void(0)" target="_blank" rel="noopener"><img
+                                        src="img/social-11.svg" alt="linkedin"></a></div>
+                        </div>
+                        <div class="sponsor">
+                            <!-- <div class="acolite"><a href="javascript:void(0)" target="_blank" rel="noopener"><img
+                                        src="img/acolite-03.svg" alt="Acolite"></a></div> -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- Inner -->
-
-        <!-- Controls -->
-        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselVideoExample"
-            data-mdb-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-mdb-target="#carouselVideoExample"
-            data-mdb-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
-    <!-- Carousel wrapper -->
-    <!-- End your project here-->
 
     <!-- MDB -->
+    <script src="./js/main.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
