--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
     <!-- MDB -->
     <script src="./js/main.js"></script>
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="./js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
     <script>
