--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="css/bootstrap-video-carousel.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap-video-carousel.min.css" />
     <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Ishan Echoes | Home Page</title>
