--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
     <!-- MDB -->
+    <script type="text/javascript" src="./js/mdb.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="test.css">
@@ -260,8 +261,6 @@
 
     <!-- MDB -->
     <script src="./js/main.js"></script>
-    <script src="./js/mdb.min.js"></script>
-    <!-- <script type="text/javascript" src="./js/mdb.min.js"></script> -->
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
     <script>
