--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="./css/bootstrap-video-carousel.min.css" />
-    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Ishan Echoes | Home Page</title>
-    <!-- MDB icon -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
-    <!-- MDB -->
+    <!-- ishan icon -->
+    <link rel="icon" href="./img/ie-logo1.jpg" type="image/x-icon" />
+    
 
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="test.css">
+
+        <!-- testimonial slider -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css">
+    
     <style>
         [data-controller=index] .projects-cont .bg-columns .text-service h2 {
             color: #2a2727;
@@ -215,7 +215,7 @@
                                 long and short format documentaries, films on development programs, advocacy films and
                                 public service advertisements.</span></p>
                         <div class="btn-hide">
-                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Learn more</a></div>
                         </div>
                     </div>
                 </div>
@@ -227,38 +227,52 @@
                                 communication objectives with honesty and passion.</span></p>
                         <p><span class="word">Our role is simply to make your film for you!</span></p>
                         <div class="btn-hide">
-                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Learn more</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="bg-columns txt sld3-sm">
                     <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld3"
                         data-scroll-repeat="true">
-                        <!-- <h2>CINE Y<br>CONTENIDO</h2>
-                        <p><span class="word">Creamos largometrajes y otros formatos para que trasciendan a nivel
-                                internacional. Somos una de las productoras audiovisuales más exitosas en el Ecuador
-                                y
-                                nos puedes encontrar en Guayaquil y Quito.</span></p>
+                        <h2>Lorem, ipsum.</h2>
+                        <p><span class="word">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam adipisci voluptatum facilis repellendus libero itaque non quisquam neque..</span></p>
                         <div class="btn-hide">
-                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
-                        </div> -->
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Learn more</a></div>
+                        </div>
                     </div>
                 </div>
-                <!-- <div class="bg-columns txt sld4-sm">
+                <div class="bg-columns txt sld4-sm">
                     <div class="text-service" data-scroll data-scroll-speed="1" data-scroll-call="sld4"
                         data-scroll-repeat="true">
-                        <h2>CORPORATIVOS</h2>
+                        <h2>Lorem, ipsum.</h2>
                         <p><span class="word">La misma experiencia y expertise de spots y cine lo aplicamos a tus
                                 videos
                                 institucionales.</span></p>
                         <div class="btn-hide">
-                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Ver Más</a></div>
+                            <div class="aux-btn"><a href="javascript:void(0)" class="button">Learn more</a></div>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
             </div>
         </div>
+        <!-- Testimonial slider -->
+        <!-- <div class="wrapper-slide">
+            <div class="my-slider">
+                <div>Slide 1</div>
+                <div>Slide 2</div>
+                <div>Slide 3</div>
+                <div>Slide 4</div>
+                <div>Slide 5</div>
+                <div>Slide 7</div>
+                <div>Slide 8</div>
+                <div>Slide 9</div>
+                <div>Slide 10</div>
+                <div>Slide 11</div>
+                <div>Slide 12</div>
+            </div>
+        </div> -->
+        <!-- Testimonial slider -->
         <div class="footer-cont">
             <div class="columns">
                 <div class="column">
@@ -319,21 +333,15 @@
             </div>
         </div>
     </div>
-
+    <!-- testimonial slider -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="script.js"></script>
     <!-- MDB -->
     <script src="./js/main.js"></script>
     <script type="text/javascript" src="./js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
-    <script>
-        const menuHamburger = document.querySelector(".menu-hamburger");
-        const navLinks = document.querySelector(".nav-links");
-
-        menuHamburger.addEventListener('click', () => {
-            navLinks.classList.toggle('mobile-menu')
-        })
-
-    </script>
 </body>
 
 </html>
