--- a/index.html
+++ b/index.html
@@ -257,21 +257,26 @@
             </div>
         </div>
         <!-- Testimonial slider -->
-        <!-- <div class="wrapper-slide">
+        <div class="wrapper-slide">
+            <h2>OUR CLIENTS</h2>
+            <div class="lineBottom"></div>
             <div class="my-slider">
-                <div>Slide 1</div>
-                <div>Slide 2</div>
-                <div>Slide 3</div>
-                <div>Slide 4</div>
-                <div>Slide 5</div>
-                <div>Slide 7</div>
-                <div>Slide 8</div>
-                <div>Slide 9</div>
-                <div>Slide 10</div>
-                <div>Slide 11</div>
-                <div>Slide 12</div>
+                <div><img src="./img/tetimonial/1.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/2.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/3.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/4.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/5.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/6.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/7.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/8.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/9.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/10.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/11.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/12.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/13.clients.png" alt="lgo"></div>
+                <div><img src="./img/tetimonial/14.clients.png" alt="lgo"></div>
             </div>
-        </div> -->
+        </div>
         <!-- Testimonial slider -->
         <div class="footer-cont">
             <div class="columns">
@@ -333,15 +338,18 @@
             </div>
         </div>
     </div>
-    <!-- testimonial slider -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="script.js"></script>
+
     <!-- MDB -->
     <script src="./js/main.js"></script>
     <script type="text/javascript" src="./js/mdb.min.js"></script>
+
+        <!-- testimonial slider -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
