--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
             <div class="lineBottom"></div>
             <div class="my-work">
                 <ul class="work-list">
-                    <li><a href="#all">All</a></li>
-                    <li><a href="#public-service">Public Service Ads</a></li>
-                    <li><a href="#short-non-fiction">Short Non-Fiction</a></li>
-                    <li><a href="#long-non-fiction">Long Non-Fiction</a></li>
-                    <li><a href="#fiction">Fiction</a></li>
-                    <li><a href="#animation">Animation</a></li>
+                    <li><a href="index#all">All</a></li>
+                    <li><a href="index#public-service">Public Service Ads</a></li>
+                    <li><a href="index#short-non-fiction">Short Non-Fiction</a></li>
+                    <li><a href="index#long-non-fiction">Long Non-Fiction</a></li>
+                    <li><a href="index#fiction">Fiction</a></li>
+                    <li><a href="index#animation">Animation</a></li>
                 </ul>
             </div>
             <div class="work-contents" id="all">
